tests/rosetta/transpiler/FS/bitmap-read-an-image-through-a-pipe.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap-read-an-image-through-a-pipe.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Bitmap-read-an-image-through-a-pipe' based on the file name 'bitmap-read-an-image-through-a-pipe.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap-read-an-image-through-a-pipe.fs(73,41): error FS0039: The field, constructor or member 'w' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap-read-an-image-through-a-pipe.fs(73,75): error FS0039: The field, constructor or member 'h' is not defined
